--- a/4-computed属性和watcher/src/index.html
+++ b/4-computed属性和watcher/src/index.html
@@ -3,10 +3,12 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>vue-init</title>
+  <title>vue</title>
 </head>
 <body>
-aaaa
-
+<div id="computed">
+  <p>初始 message 是："{{ message }}"</p>
+  <p>计算后的翻转 message 是："{{ reversedMessage }}"</p>
+</div>
 </body>
 </html>
